row gap fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -146,6 +146,7 @@ h1{
         grid-template-columns: 1fr 1fr 1fr;
         align-items: center;
         padding-bottom: 1rem;
+        row-gap: 1rem;
 
         font-size: 16px;
 
